tests/miniJava/neg/005123_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java true int [] java ) { return 0 ; } }
